<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="ephec.noticeme.Profile">

    <android.support.design.widget.FloatingActionButton android:id="@+id/fab"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_gravity="bottom|end" android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_edit" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/editProfileName"
        android:hint="@string/editProfileName"
        android:textColorHint="@color/lightGrey"
        android:layout_marginTop="5dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/editProfileFirstname"
        android:hint="@string/editProfileFirstname"
        android:textColorHint="@color/lightGrey"
        android:layout_below="@+id/editProfileName"
        android:layout_marginTop="5dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/editProfileEmail"
        android:hint="@string/editProfileEmail"
        android:textColorHint="@color/lightGrey"
        android:layout_below="@+id/editProfileFirstname"
        android:layout_marginTop="5dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
