<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_add_memo" tools:context="ephec.noticeme.AddMemoActivity">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:scrollbars="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/memo_title"
                android:inputType="textCapSentences"
                android:hint="@string/addMemoTitle"
                android:textColorHint="@color/lightGrey"
                android:scrollbars = "vertical"
                android:layout_marginTop="5dp" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/memo_description"
                android:inputType="textCapSentences|textMultiLine"
                android:hint="@string/addMemoDescription"
                android:layout_below="@+id/memo_title"
                android:textColorHint="@color/lightGrey"
                android:layout_marginTop="5dp"
                android:ems="10" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/memo_textDate"
                android:inputType="date"
                android:layout_below="@+id/memo_description"
                android:lines="1"
                android:maxLines="1"
                android:hint="@string/addMemoChooseDate"
                android:textColorHint="@color/lightGrey"
                android:layout_marginTop="5dp"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/memo_textTime"
                android:layout_below="@+id/memo_textDate"
                android:lines="1"
                android:maxLines="1"
                android:hint="@string/addMemoChooseTime"
                android:textColorHint="@color/lightGrey"
                android:layout_marginTop="5dp"/>

            <RelativeLayout
                android:id="@+id/map_layout"
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:layout_below="@+id/memo_textTime"
                android:layout_alignParentStart="true">

                <fragment
                    android:id="@+id/map_frag"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="-100dp"
                    android:layout_marginBottom="-100dp"
                    android:name="com.google.android.gms.maps.SupportMapFragment"/>

                <ImageView
                    android:id="@+id/transparent_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@color/transparent" />

            </RelativeLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>
